# one-billion-row-challenge-python

./: .gitignore  README.md  pyproject.toml
data/: create_data.py
src/: main.py
