[tool.poetry]
name = "one-billion-row-challenge-python"
version = "0.1.0"
description = ""
authors = ["stefancodebeez <stefan@codebeez.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
duckdb = "^0.10.0"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
